--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Ignore backend build artifacts and runtime data
+/backend/target/
+/backend/data/
+/backend/logs/
